login page added

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
     <header>
 
-        <a href="site-index.html" class="home">Worldjumper Central</a>
+        <a href="index.html#top" class="home">Worldjumper Central</a>
 
         <div class="login">
             <div>
                 <i class="WJ_Logo_Brander"></i>
                 <i class="WJ_Logo_Handle"></i>
                 <div class="login_button">
-                    <a href="">Join Us</a>
+                    <a href="login.html">Join Us</a>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <h2>Worldjumper Coalition</h2>
 
         <div class="start">
-            <a href="">Start Exploring</a>
+            <a href="#Destinations">Start Exploring</a>
         </div>
 
         <div class="Compass">
@@ -117,11 +117,11 @@
 
     </section>
 
-    <section class="">
+    <section class="Destinations" id="Destinations">
 
-        <a href="page-1.html">Chicken World</a>
-        <a href="page-2.html">World Two</a>
-        <a href="page-3.html">World Three</a>
+        <div><a href="page-1.html">Chicken World</a></div>
+        <div><a href="page-2.html">World Two</a></div>
+        <div><a href="page-3.html">World Three</a></div>
 
     </section>
 
