first-full-pass

--- a/index.html
+++ b/index.html
@@ -119,12 +119,19 @@
 
     <section class="Destinations" id="Destinations">
 
-        <div><a href="page-1.html">Chicken World</a></div>
-        <div><a href="page-2.html">World Two</a></div>
+        <div><a href="chicken.html">Chickens</a></div>
+        <div><a href="linktree.html">Linktree</a></div>
         <div><a href="page-3.html">World Three</a></div>
 
     </section>
 
+    <footer>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="chicken.html">Chickens</a></div>
+        <div><a href="linktree.html">Linktree</a></div>
+        <div><a href="login.html">Login</a></div>
+    </footer>
+    
 </body>
 
 </html>
