--- a/login.html
+++ b/login.html
@@ -71,7 +71,12 @@
 
     </section>
 
-
+    <footer>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="chicken.html">Chickens</a></div>
+        <div><a href="linktree.html">Linktree</a></div>
+        <div><a href="login.html">Login</a></div>
+    </footer>
 
 
 
